--- a/src/main.html
+++ b/src/main.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>タスク管理メインページ</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="topic.js"></script>
 </head>
 <body>
-   メインページ（工事中） 
+    <div id="header">
+        <header><h1>Task管理システム</h1></header>
+    </div>
+    <div id="content">
+        <div id="side">
+            <p>サイドメニュー</p>
+            <table>
+                <tr></tr>
+            </table>
+        </div>
+        <div id="main">
+            <p>メインページ</p>
+        </div>
+    </div>
+    <div id="footer">
+        <footer><h4>仮ページ</h4></footer>
+    </div>
 </body>
 </html>
